--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
     "express": "^4.17.1",
     "socket.io": "^3.0.3"
   },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.2",
+    "gulp-useref": "^5.0.0",
+    "gulp-util": "^3.0.8"
+  },
   "scripts": {
     "start": "node index.js"
   }
